# dxcli

./: .gitignore  Cargo.toml  README.md  install.sh  plan.md  test.json  test.md
.github/workflows/: release.yml
src/: main.rs  output.rs  utils.rs
src/cli/: encode_decode.rs  hash.rs  json.rs  jwt.rs  lorem.rs  mod.rs  regex.rs  text.rs  time.rs  uuid.rs
src/handlers/: decode.rs  encode.rs  hash.rs  json.rs  jwt.rs  lorem.rs  mod.rs  regex.rs  text.rs  time.rs  uuid.rs
