[package]
name = "dx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
serde_json = "1.0"
miette = { version = "7.6.0", features = ["fancy"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
hex = "0.4.3"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
capitalize = "0.3.4"
stringcase = "0.4.0"
sha2 = "0.9.1"
md-5 = "0.10.6"
jsonwebtoken = {version = "10.2.0", features = ["rust_crypto"]}
regex = "1.12.2"
lipsum = "0.8.2"
rand = {version = "0.9", features = ["thread_rng", "alloc"]}

[dev-dependencies]
pretty_assertions = "1.4.1"